--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.7",
     "apollo-link-rest": "^0.9.0-rc.1",
+    "cookies-next": "^2.1.1",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
