--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.8.7",
     "apollo-link-rest": "^0.9.0-rc.1",
     "cookies-next": "^2.1.1",
+    "iron-session": "^6.2.1",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
