--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "cookies-next": "^2.1.1",
     "iron-session": "^6.2.1",
     "next": "12.2.1",
+    "papaparse": "^5.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
+    "@types/papaparse": "^5.3.5",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.19.0",
