--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.7",
+    "@reduxjs/toolkit": "^1.8.5",
     "apollo-link-rest": "^0.9.0-rc.1",
     "cookies-next": "^2.1.1",
     "iron-session": "^6.2.1",
     "next": "12.2.1",
     "papaparse": "^5.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
