--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fontsource/barlow": "^4.5.9",
     "@mui/material": "^5.8.7",
     "@reduxjs/toolkit": "^1.8.5",
     "apollo-link-rest": "^0.9.0-rc.1",
