--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.9.3",
     "@fontsource/barlow": "^4.5.9",
     "@mui/material": "^5.8.7",
+    "@mui/x-date-pickers": "^5.0.8",
     "@reduxjs/toolkit": "^1.8.5",
+    "dayjs": "^1.11.6",
     "iron-session": "^6.2.1",
     "next": "12.2.1",
     "papaparse": "^5.3.2",
