--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "papaparse": "^5.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
     "@types/papaparse": "^5.3.5",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.1",
     "typescript": "4.7.4"
